--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "pistol"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Kiley Owen <yelikdev@gmail.com>"]
 
 [dependencies]
 piston_window = "0.43.0"
+pistoncore-sdl2_window = "0.30.2"
 image = "0.9.0"
 scoped_threadpool = "0.1.7"
 fnv = "1.0.2"
